src/objects/Account_Banking_System_Debt__c.object
<CustomObject>
    <fields>
        <fullName>Direct_Debt__c</fullName>
        <formula>IF(product_group_classification_id__c=&quot;DIRECTA&quot;,  debt_current_balance_amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deuda directa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Banking_System_Debt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>debt_current_balance_amount__c</fullName>
        <label>Debt amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>debt_quote_amount__c</fullName>
        <label>Debt quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>entity_name__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entity_order__c</fullName>
        <formula>CASE( UPPER(entity_name__c),&apos;BBVA&apos;,1,&apos;BCP&apos;,2,&apos;SCOTIA&apos;,3,&apos;IBK&apos;,4,&apos;Otros&apos;,5,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>period__c</fullName>
        <formula>CASE(MONTH(year_month_day_date__c), 1, &apos;ENERO&apos;, 2, &apos;FEBRERO&apos;, 3, &apos;MARZO&apos;, 4, &apos;ABRIL&apos;, 5, &apos;MAYO&apos;, 6, &apos;JUNIO&apos;, 7, &apos;JULIO&apos;, 8, &apos;AGOSTO&apos;, 9, &apos;SEPTIEMBRE&apos;, 10, &apos;OCTUBRE&apos;, 11, &apos;NOVIEMBRE&apos;, 12, &apos;DICIEMBRE&apos;,&apos;SIN MES&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_desc__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_desc_calc__c</fullName>
        <formula>CASE(UPPER( product_desc__c ),&apos;DESCUENTO DE LETRAS&apos;,&apos;Dto. Letras&apos;,&apos;CARTA CRÉDITO&apos;,&apos;C. Crédito&apos;,product_desc__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Calculated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_desc_order__c</fullName>
        <formula>CASE(UPPER( product_group_classification_id__c ),&apos;DIRECTA&apos;,CASE(UPPER( product_desc__c ),&apos;PRÉSTAMO&apos;,1,&apos;COMEX&apos;,2,&apos;LEASING&apos;,3,&apos;DESCUENTO DE LETRAS&apos;,4,&apos;FACTORING&apos;,5,&apos;OTROS&apos;,6,0),&apos;INDIRECTA&apos;,CASE(UPPER( product_desc__c ),&apos;FIANZAS&apos;,7,&apos;CARTA CRÉDITO&apos;,8,&apos;OTROS&apos;,9,0),&apos;GARANTÍAS&apos;,CASE(UPPER(product_desc__c),&apos;HIPOTECA&apos;,10,&apos;PRENDA&apos;,11,&apos;OTROS&apos;,12,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_group_classification_id__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_group_classification_order__c</fullName>
        <formula>CASE(UPPER( product_group_classification_id__c ),&apos;DIRECTA&apos;,1,&apos;INDIRECTA&apos;,2,&apos;GARANTÍAS&apos;,3,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ranking_number__c</fullName>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>unpaid_days_number__c</fullName>
        <label>Unpaid days number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>is_date_within_last_6_months__c</fullName>
        <formula>IF( year_month_day_date__c &gt; ADDMONTHS( account_id__r.account_banking_system_debt_last_date__c ,-6) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is date within last 6 months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_last_date__c</fullName>
        <formula>IF( year_month_day_date__c =  account_id__r.account_banking_system_debt_last_date__c  ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is last date?</label>
        <type>Checkbox</type>
    </fields>
    <label>Información SBS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>product_group_classification_id__c</columns>
        <columns>product_desc__c</columns>
        <columns>entity_name__c</columns>
        <columns>debt_current_balance_amount__c</columns>
        <columns>debt_quote_amount__c</columns>
        <columns>unpaid_days_number__c</columns>
        <columns>ranking_number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ABSD-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Información SBS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>